# Capstone-Re-entry

./: .gitignore  README.md  pyproject.toml  temp.ipynb
notebooks/: MoreSpatialFeaturesZacharyKepe.ipynb  RonaldoRojasModel.ipynb  ZacharyKepeAutoencoder.ipynb  ZacharyKepeBestPerforming.ipynb  ZacharyKepeGreaterSampling.ipynb  ZacharyKepeMoreInputsNonRandom.ipynb  ZacharyKepeNoDownSampling.ipynb  ZacharyKepeTrainNewSplitMethod.ipynb  ZacharyKepeTwoStage.ipynb  apollo_data_exploration.ipynb  improved_ml_model.ipynb  reentry_pinn_victoria.ipynb
