[project]
name = "captsone-re-entry"  # keep as-is; you can rename later
version = "0.1.0"
description = ""
authors = [
    { name = "Gabriel Diaz", email = "g.diaz119510@gmail.com" }
]
requires-python = ">=3.9"
dependencies = []

[tool.poetry]
# Poetry-specific settings (not PEP 621)
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
